add simple tests for known outputs